Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
@@ -128,19 +128,19 @@
         "id": "2ZUPvysCnt1U"
       },
       "source": [
-        "## Clase Nodo\n",
+        "## Clase `Nodo`\n",
         "\n",
-        "La clase Nodo, es una clase muy sencilla que solo consta del constructor, un par de atributos y un par de métodos."
+        "La clase `Nodo`, es una clase muy sencilla que solo consta del constructor, un par de atributos y un par de métodos."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5uykDkOsJYz5",
-        "outputId": "c7f4448c-8781-4d7b-eb8e-c300e0b8bc3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5uykDkOsJYz5",
+        "outputId": "c7f4448c-8781-4d7b-eb8e-c300e0b8bc3a"
       },
       "source": [
         "# Clase Nodo que hereda de la clase object\n",
@@ -192,172 +192,102 @@
         "id": "LvVFnjttnust"
       },
       "source": [
-        "## Clase ArbolAdivinador\n",
+        "## Clase `ArbolAdivinador`\n",
         "\n",
-        "***Arbol Binario de Búsqueda (ABB)***\n",
-        "\n",
-        "Sea $A$ un árbol binario con raíz $R$, hijos izquierdo y derecho (posiblemente nulos) $H_I$ y $H_D$, respectivamente. Diremos que $A$ es un ABB si y solo si se satisfacen las dos condiciones siguientes de manera simultanea:\n",
-        "\n",
-        "*    $H_I$ es vacío $\\lor$ ($R$ contiene un valor mayor que todo elemento de $H_I \\land H_I$ es un ABB).\n",
-        "*    $H_D$ es vacío $\\lor$ ($R$ contiene un valor menor que todo elemento de $H_D \\land H_D$ es un ABB)."
+        "La clase `ArbolAdivinador` se encarga organizar los nodo de tal forma que podamos construir un árbol binario que nos permita adivinar el animal en el que esta pensando el usuario."
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "YT9KUGd1nvJq"
+        "id": "UY897IyPLshl",
+        "outputId": "f6b635f6-2080-4b4f-87c3-d774676b3a7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Nota: Donde $\\land$ es la conjunción lógica \"y\", y $\\lor$ es la disyunción lógica \"o\"."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5ctD1FN0n4qI"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/abb.png?raw=1\" width=\"500\"> \n",
-        "</center>\n",
-        "Figura 3: Árbol Binario de Búsqueda (ABB)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8RkyR2Isn5A4"
-      },
-      "source": [
-        "## Operaciones sobre ABB\n",
+        "#from string import lower\n",
         "\n",
-        "Al igual que con los AB, los ABB son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos.\n",
+        "'''Clase basada en arboles binarios para identificar en que\n",
+        "animal estas pensando'''\n",
+        "class ArbolAdivinador(object):\n",
+        "    \n",
+        "  # Constructor de adivinadores\n",
+        "  def __init__(self):\n",
+        "    self.raiz = Nodo(\"pajaro\")\n",
+        "      \n",
+        "  #Funcion para determinar si se desea continuar con mas preguntas\n",
+        "  def si(self, preg):\n",
+        "    #se muestra una pregunta en consola y se pide la respuesta del usuario\n",
+        "    resp = str.lower(input(preg))\n",
+        "    return (resp[0] == 's')\n",
+        "  \n",
+        "  def adivina(self):\n",
+        "    ciclo = True\n",
+        "    while ciclo:\n",
+        "      #en caso de no querer continuar con mas preguntas\n",
+        "      if not self.si(\"Estas pensando en un animal? \"):\n",
+        "        print('Gracias por jugar :)')\n",
+        "        break\n",
+        "      #nodo temporal que sirve para recorrer el arbol\n",
+        "      temporal = self.raiz\n",
+        "      #se hacen preguntas al usuario hasta llegar a una hoja\n",
+        "      #siempre que se tenga hijo izquierdo podemos preguntar\n",
+        "      while temporal.izq != None:\n",
+        "        #si la respuesta es afirmativa avanzamos al hijo izquierdo\n",
+        "        if self.si(temporal.dato + \"? \"):\n",
+        "          temporal = temporal.izq\n",
+        "        #de otra forma avanza al hijo derecho\n",
+        "        else:\n",
+        "          temporal = temporal.der\n",
+        "      #se llega a un nodo hoja\n",
+        "      animal = temporal.dato\n",
+        "      #si se adivino termina, en caso contrario hay que obtener info.\n",
+        "      if self.si(\"Es un \" + animal + \"? \"):\n",
+        "        print(\"¡Soy el más grande!\")\n",
+        "        print(\"███████████████████████████████─\")\n",
+        "        print(\"──────▀█▄▀▄▀████▀──▀█▄▀▄▀████▀──\")\n",
+        "        print(\"────────▀█▄█▄█▀──────▀█▄█▄█▀────\")\n",
+        "      else:\n",
+        "        #nuevo animal\n",
+        "        nuevo = input(\"¿Qué animal era? \")\n",
+        "        #nueva pregunta para diferenciar a la hoja actual del nuevo animal\n",
+        "        info = input(\"¿Qué diferencia a un \" + animal + \" de un \" + nuevo + \"? \")\n",
+        "        #se actualiza el nodo con la nueva pregunta\n",
+        "        temporal.dato = info\n",
+        "        #se agrega como izquierdo al animal que estaba en la hoja\n",
+        "        temporal.izq = Nodo(animal)\n",
+        "        #y como derecho el nuevo animal\n",
+        "        temporal.der = Nodo(nuevo)\n",
+        "            \n",
+        "def main():\n",
+        "  adivino = ArbolAdivinador()\n",
+        "  adivino.adivina()\n",
         "\n",
-        "Las principales operaciones de los ABB podemos decir que se\n",
-        "**heredan**de los AB, sin embargo dado que que los ABB se\n",
-        "caracterizan por estar ordenados, las operaciones de insertar y eliminar nodos cambia, para que después de llevar a cabo alguna de estas operaciones, el árbol en cuestión, cumpla con la definición de ABB.\n",
-        "\n",
-        "Esta modificación, implica que en la mayoría de los casos las\n",
-        "operaciones sobre los ABB se mantenga en el orden de **complejidad logarítmica $O(log_{2}n)$** donde n es el número de nodos.\n",
-        "\n",
-        "Sin embargo no se puede garantizar que nunca se dará el caso\n",
-        "degenerado del árbol, que es el peor caso, en el cual podemos pensar el ABB como una lista. En esta situación las operaciones son mas costosas, llegando a **$O(n)$**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o8rjhI9dn5Za"
-      },
-      "source": [
-        "# Arboles AVL (Balanceados)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TKb-UU2Vn5wq"
-      },
-      "source": [
-        "## Características\n",
-        "\n",
-        "Los Arboles AVL (o balanceados) le deben su nombre a los creadores de este tipo de árboles, Georgii Adelson-Velskii y Yevgeniy Landis.\n",
-        "\n",
-        "La principal característica de este tipo de arboles es que siempre permanecen **balanceados**.\n",
-        "\n",
-        "El hecho de que estos arboles se mantengan balanceados, sin\n",
-        "importar cuantos elementos se inserten o se eliminen ayuda a\n",
-        "**disminuir el orden de complejidad** de las operaciones mas comunes en árboles, como la búsqueda.\n",
-        "\n",
-        "La forma en la que estos árboles se mantienen balanceados es gracias a la **definición de balanceo** y a las operaciones para balancear un nodo, conocidas como **rotaciones**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ywRyFRoFog88"
-      },
-      "source": [
-        "## Definición Formal \n",
-        "\n",
-        "Arbol AVL (AAVL)\n",
-        "\n",
-        "Sea $A$ un árbol binario de búsqueda con raíz $R$, hijos izquierdo y derecho (posiblemente nulos) $H_I$ y $H_D$, respectivamente.\n",
-        "\n",
-        "Diremos que $A$ es un AAVL si y solo si.\n",
-        "\n",
-        "*    $H_I$ es AAVL.\n",
-        "*    $H_D$ es AAVL.\n",
-        "*    $|altura(H_I) - altura(H_D)| \\leq 1$:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gvNyfdXrohLl"
-      },
-      "source": [
-        "Nota: Donde $altura$ es la operación que nos devuelve la altura de un árbol (subarbol)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-UIo3fYyohcR"
-      },
-      "source": [
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/avl.png?raw=1\" width=\"500\"> \n",
-        "</center>\n",
-        "Figura 4: Árbol AVL (AAVL)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8ThH3ht2oh1N"
-      },
-      "source": [
-        "## Operaciones sobre AAVL\n",
-        "\n",
-        "Al igual que con los ABB, los AAVL son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos. Y podríamos pensar que en este caso cada nodo almacena un valor adicional conocido como **factor de equilibrio**, mismo que nos indica que tan balanceado se encuentra ese nodo.\n",
-        "\n",
-        "Los AAVL heredan todas las operaciones, que se realizan sobre los ABB, sin embargo para mantener el árbol balanceado despues de insertar o eliminar un valor, es necesario revisar que el árbol se encuentre balanceado."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0H51P2a0oiEw"
-      },
-      "source": [
-        "En caso de que el árbol se haya desbalanceado, sera necesario llevar a cabo una de estas 4 operaciones:\n",
-        "*   Rotación simple a la derecha.\n",
-        "*   Rotación simple a la izquierda.\n",
-        "*   Doble rotación a la derecha.\n",
-        "*   Doble rotación a la izquierda."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RV3UEtNWoiXE"
-      },
-      "source": [
-        "## Factor de Equilibrio (FE)\n",
-        "\n",
-        "Dado que por definición los AAVL siempre se encuentran balanceados, al insertar o eliminar un dato solo se podrá dar uno de los siguientes 4 casos:\n",
-        "\n",
-        "* **FE**(nodo) = -2 y (**FE**(nodo.der)=-1 ó **FE**(nodo.der)=0): se balancea con una rotación **simple a la izquierda** sobre nodo.\n",
-        "\n",
-        "* **FE**(nodo) = 2 y (**FE**(nodo.izq)=1 ó **FE**(nodo.izq)=0): se balancea con una rotación **simple a la derecha** sobre nodo.\n",
-        "\n",
-        "* **FE**(nodo) = -2 y **FE**(nodo.der)=1: se balancea con una **doble rotación a la izquierda**. Primero se rota a la derecha sobre nodo.der y después a la izquierda sobre nodo. \n",
-        "\n",
-        "* **FE**(nodo) = 2 y **FE**(nodo.izq)=-1: se balancea con una **doble rotación a la derecha**. Primero se rota a la izquierda sobre nodo.izq y después a la derecha sobre nodo. \n",
-        "\n",
-        "Es importante recalcar que cada vez que se balancea un nodo después de insertar o eliminar, $\\color{red}{potencialmente\\,su\\,padre\\,ser\\acute{a}\\,desbalanceado}$, es por este motivo que se tiene que **rebalancear el padre de manera recursiva y revisar los factores de equilibrio hasta llegar a la raíz**."
+        "main()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estas pensando en un animal? si\n",
+            "Es un pajaro? no\n",
+            "¿Qué animal era? perro\n",
+            "¿Qué diferencia a un pajaro de un perro? vuela\n",
+            "Estas pensando en un animal? si\n",
+            "vuela? no\n",
+            "Es un perro? si\n",
+            "¡Soy el más grande!\n",
+            "███████████████████████████████─\n",
+            "──────▀█▄▀▄▀████▀──▀█▄▀▄▀████▀──\n",
+            "────────▀█▄█▄█▀──────▀█▄█▄█▀────\n",
+            "Estas pensando en un animal? no\n",
+            "Gracias por jugar :)\n"
+          ]
+        }
       ]
     },
     {
