--- a/AlgoritmosBusqueda/04_02_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_02_ArbolAdivinador.ipynb
@@ -69,15 +69,15 @@
         "\n",
         "Haciendo uso de la estructura de datos conocida como árbol binario, vamos a tratar de adivinar el animal en el que esta pensando el usuario, en caso de adivinar el objetivo se logro, pero en caso contrario se le pide al usuario que indique en que animal estaba pensando y en como diferenciarlo del animal que le mostró el algoritmo.\n",
         "\n",
-        "La idea detras de este algoritmo es muy sencilla y muy parecida a la **búsqueda binaria**, cada pregunta que se le realiza al usuario descarta una gran cantidad de posibles animales, ya que la respuesta es booleana y eso acota el posible espacio de búsqueda.\n",
+        "La idea detrás de este algoritmo es muy sencilla y muy parecida a la **búsqueda binaria**, cada pregunta que se le realiza al usuario descarta una gran cantidad de posibles animales, ya que la respuesta es booleana y eso acota el posible espacio de búsqueda.\n",
         "\n",
-        "De igual manera que con los aŕboles binarios, cada nodo del árbol adivinador se ve de la siguiente forma.\n",
+        "De igual manera que con los árboles binarios, cada nodo del árbol adivinador se ve de la siguiente forma.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/nodo.png?raw=1\" width=\"600\"> \n",
         "</center>\n",
         "\n",
-        "Aunque una sutíl diferencia es que el dato contenido dentro de cada nodo intermedio será una pregunta, las hojas serán aniames, las respuestas afirmativas a cada pregunta son los hijos izquierdos de todo nodo interno y las respuestas negativas son los hijos derechos de cada nodo intermedio."
+        "Aunque una sutil diferencia es que el dato contenido dentro de cada nodo intermedio será una pregunta, las hojas serán animales, las respuestas afirmativas a cada pregunta son los hijos izquierdos de todo nodo interno y las respuestas negativas son los hijos derechos de cada nodo intermedio."
       ]
     },
     {
@@ -88,19 +88,19 @@
       "source": [
         "## Descripción del algoritmo \n",
         "\n",
-        "El árbol comienza con un solo nodo (la raíz) y esa es la base de conocimiento, así que el programa le pregunta al usuario si el animal que esta pensando es ese que contiene la raíz, digamos un pajaro.\n",
+        "El árbol comienza con un solo nodo (la raíz) y esa es la base de conocimiento, así que el programa le pregunta al usuario si el animal que esta pensando es ese que contiene la raíz, digamos un pájaro.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad1.png?raw=1\" width=\"600\"> \n",
         "</center>\n",
         "\n",
-        "Si la respuesta es afirmativa, el algoritmo cumple con su objetivo ya que adivino el animal que estaba pensando el usuario. Sin embargo en caso de que la respuesta sea negativa, es decir que no se adivino el animal que estaba pensando el usuario, se le pide al usuario indicar el animal que estaba pensando y como diferenciarlo del animal que le mostro el programa.\n",
+        "Si la respuesta es afirmativa, el algoritmo cumple con su objetivo ya que adivino el animal que estaba pensando el usuario. Sin embargo en caso de que la respuesta sea negativa, es decir que no se adivino el animal que estaba pensando el usuario, se le pide al usuario indicar el animal que estaba pensando y como diferenciarlo del animal que le mostró el programa.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad2.png?raw=1\" width=\"500\"> \n",
         "</center>\n",
         "\n",
-        "Se puede apreciar en esta imagen que las respuestas afirmativas son los hijos izquierdos de todo nodo y que las respuestas negativas son los hijos derechos de cada nodo. Conforme el programa es más usado, la base de conocimiento se incremeta cada vez más, hasta tener un árbol suficientemente entrenado como para poder adividinar cualquier animal, sin importar lo especifico que este sea.\n",
+        "Se puede apreciar en esta imagen que las respuestas afirmativas son los hijos izquierdos de todo nodo y que las respuestas negativas son los hijos derechos de cada nodo. Conforme el programa es más usado, la base de conocimiento se incrementa cada vez más, hasta tener un árbol suficientemente entrenado como para poder adivinar cualquier animal, sin importar lo especifico que este sea.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad3.png?raw=1\" width=\"450\"> \n",
@@ -117,9 +117,9 @@
       "source": [
         "# Implementación del algoritmo\n",
         "\n",
-        "Ya que nos hemos familiarizado con el uso de la POO, vamos a hacer uso de clases para implemetar nuestro algoritmo.\n",
+        "Ya que nos hemos familiarizado con el uso de la POO, vamos a hacer uso de clases para implementar nuestro algoritmo.\n",
         "\n",
-        "Vamos a hacer uso de la clase Nodo y de la clase ArbolAdivinador, normalmente la clase Nodo se define como clase interna dentro de la clase ArbolBinario con la intención de ocultar algunas de sus caracteristicas además de reafirmar el hecho de que no se pueden crear árboles si no se tienen nodos."
+        "Vamos a hacer uso de la clase Nodo y de la clase ArbolAdivinador, normalmente la clase Nodo se define como clase interna dentro de la clase ArbolBinario con la intención de ocultar algunas de sus características además de reafirmar el hecho de que no se pueden crear árboles si no se tienen nodos."
       ]
     },
     {
