Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/04_04_ArbolesValanceados.ipynb
+++ b/AlgoritmosBusqueda/04_04_ArbolesValanceados.ipynb
@@ -65,24 +65,15 @@
         "id": "o8rjhI9dn5Za"
       },
       "source": [
-        "# Arboles AVL (Balanceados)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TKb-UU2Vn5wq"
-      },
-      "source": [
-        "## Características\n",
+        "# Arboles AVL (Balanceados)\n",
         "\n",
         "Los Arboles AVL (o balanceados) le deben su nombre a los creadores de este tipo de árboles, Georgii Adelson-Velskii y Yevgeniy Landis.\n",
         "\n",
-        "La principal característica de este tipo de arboles es que siempre permanecen **balanceados**.\n",
+        "La principal característica de este tipo de árboles es que siempre permanecen **balanceados**.\n",
         "\n",
-        "El hecho de que estos arboles se mantengan balanceados, sin\n",
+        "El hecho de que estos árboles se mantengan balanceados, sin\n",
         "importar cuantos elementos se inserten o se eliminen ayuda a\n",
-        "**disminuir el orden de complejidad** de las operaciones mas comunes en árboles, como la búsqueda.\n",
+        "**disminuir el orden de complejidad** de las operaciones más comunes en árboles, como la búsqueda.\n",
         "\n",
         "La forma en la que estos árboles se mantienen balanceados es gracias a la **definición de balanceo** y a las operaciones para balancear un nodo, conocidas como **rotaciones**."
       ]
@@ -124,8 +115,7 @@
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/avl.png?raw=1\" width=\"500\"> \n",
-        "</center>\n",
-        "Figura 4: Árbol AVL (AAVL)"
+        "</center>"
       ]
     },
     {
@@ -138,7 +128,7 @@
         "\n",
         "Al igual que con los ABB, los AAVL son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos. Y podríamos pensar que en este caso cada nodo almacena un valor adicional conocido como **factor de equilibrio**, mismo que nos indica que tan balanceado se encuentra ese nodo.\n",
         "\n",
-        "Los AAVL heredan todas las operaciones, que se realizan sobre los ABB, sin embargo para mantener el árbol balanceado despues de insertar o eliminar un valor, es necesario revisar que el árbol se encuentre balanceado."
+        "Los AAVL heredan todas las operaciones, que se realizan sobre los ABB, sin embargo para mantener el árbol balanceado después de insertar o eliminar un valor, es necesario revisar que el árbol se encuentre balanceado."
       ]
     },
     {
