--- a/AlgoritmosBusqueda/04_03_ArbolesBinariosBusqueda.ipynb
+++ b/AlgoritmosBusqueda/04_03_ArbolesBinariosBusqueda.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "04_03_ArbolesBinariosBusqueda.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +128,44 @@
       "source": [
         "## Clase Arbol Binario de Búsqueda `ABB`\n",
         "\n",
-        "A continuación se muestra el código para la clase `ABB` y podemos notar que esta clase hereda de la clase `AB`, lo que significa que estas creado un árbol binario de búsqueda tomando un arbo binario como base."
+        "A continuación se muestra el código para la clase `ABB` y podemos notar que esta clase hereda de la clase `AB`, lo que significa que estas creado un árbol binario de búsqueda tomando un arbo binario como base.\n",
+        "\n",
+        "Para esto necesitamos incluir en nuestra sesió actual el jupyter de AB, eso lo hacemos con la siguiente celda."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nFwbfu6B1aIQ",
+        "outputId": "d391eeb6-f27c-4f33-d827-3df53dd8cbc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+        "!pip install import-ipynb"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-11-04 07:48:00--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 36350 (35K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinarios.ipynb’\n",
+            "\n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  35.50K  --.-KB/s    in 0.009s  \n",
+            "\n",
+            "2021-11-04 07:48:00 (3.88 MB/s) - ‘ArbolesBinarios.ipynb’ saved [36350/36350]\n",
+            "\n",
+            "Requirement already satisfied: import-ipynb in /usr/local/lib/python3.7/dist-packages (0.1.3)\n"
+          ]
+        }
       ]
     },
     {
@@ -138,6 +174,10 @@
         "id": "THYAYqDMd3IX"
       },
       "source": [
+        "import import_ipynb\n",
+        "from ArbolesBinarios import AB\n",
+        "from ArbolesBinarios import Nodo\n",
+        "\n",
         "''' Clase arbol, genera la estructura de un arbol binario, asi como sus funciones.'''\n",
         "class ABB(AB):\n",
         "  ''' Consructor de arboles'''\n",
@@ -292,8 +332,34 @@
         "  def borra(self, dato):\n",
         "    self.borra_nodo(self.raiz, dato)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UYylKrmDxuz8"
+      },
+      "source": [
+        "# Métodos Importantes\n",
+        "\n",
+        "Lo primero que podemos notar, es que dado que la clase ABB hereda de la clase AB, entonces ya tenemos los siguientes métodos que no sufren cambios con respecto a la clase AB:\n",
+        "\n",
+        "*   `elimina`: borra todo el árbol.\n",
+        "*   `nivel`: devuelve el nivel del nodo.\n",
+        "*   `altura`: devuelve la altura de un nodo.\n",
+        "*   `recorridos`: devuelve la altura de un nodo.\n",
+        "\n",
+        "Todos estos métodos no sufren cambios ya que funcionan exactamente igual que en la versión AB.\n",
+        "\n",
+        "Por otro lado los metodos que sufren cambios y que requiere un analizis más detallados son los siguientes: \n",
+        "\n",
+        "*   `busqueda`: busca un valor en el árbol.\n",
+        "*   `minimo_en_subarbol`: devuelve el mínimo a partir de un nodo.\n",
+        "*   `insertar`: inserta un valor en el árbol.\n",
+        "*   `borrar`: borra un valor del árbol.\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,7 +377,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62241740-e961-4432-dcd5-897f445f3463"
+        "outputId": "cff0334a-018b-453a-f4da-623e17bbfad9"
       },
       "source": [
         "def main():\n",
@@ -341,7 +407,7 @@
         "\n",
         "main()"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,122 +450,6 @@
             "17\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o8rjhI9dn5Za"
-      },
-      "source": [
-        "# Arboles AVL (Balanceados)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TKb-UU2Vn5wq"
-      },
-      "source": [
-        "## Características\n",
-        "\n",
-        "Los Arboles AVL (o balanceados) le deben su nombre a los creadores de este tipo de árboles, Georgii Adelson-Velskii y Yevgeniy Landis.\n",
-        "\n",
-        "La principal característica de este tipo de arboles es que siempre permanecen **balanceados**.\n",
-        "\n",
-        "El hecho de que estos arboles se mantengan balanceados, sin\n",
-        "importar cuantos elementos se inserten o se eliminen ayuda a\n",
-        "**disminuir el orden de complejidad** de las operaciones mas comunes en árboles, como la búsqueda.\n",
-        "\n",
-        "La forma en la que estos árboles se mantienen balanceados es gracias a la **definición de balanceo** y a las operaciones para balancear un nodo, conocidas como **rotaciones**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ywRyFRoFog88"
-      },
-      "source": [
-        "## Definición Formal \n",
-        "\n",
-        "Arbol AVL (AAVL)\n",
-        "\n",
-        "Sea $A$ un árbol binario de búsqueda con raíz $R$, hijos izquierdo y derecho (posiblemente nulos) $H_I$ y $H_D$, respectivamente.\n",
-        "\n",
-        "Diremos que $A$ es un AAVL si y solo si.\n",
-        "\n",
-        "*    $H_I$ es AAVL.\n",
-        "*    $H_D$ es AAVL.\n",
-        "*    $|altura(H_I) - altura(H_D)| \\leq 1$:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gvNyfdXrohLl"
-      },
-      "source": [
-        "Nota: Donde $altura$ es la operación que nos devuelve la altura de un árbol (subarbol)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-UIo3fYyohcR"
-      },
-      "source": [
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/avl.png?raw=1\" width=\"500\"> \n",
-        "</center>\n",
-        "Figura 4: Árbol AVL (AAVL)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8ThH3ht2oh1N"
-      },
-      "source": [
-        "## Operaciones sobre AAVL\n",
-        "\n",
-        "Al igual que con los ABB, los AAVL son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos. Y podríamos pensar que en este caso cada nodo almacena un valor adicional conocido como **factor de equilibrio**, mismo que nos indica que tan balanceado se encuentra ese nodo.\n",
-        "\n",
-        "Los AAVL heredan todas las operaciones, que se realizan sobre los ABB, sin embargo para mantener el árbol balanceado despues de insertar o eliminar un valor, es necesario revisar que el árbol se encuentre balanceado."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0H51P2a0oiEw"
-      },
-      "source": [
-        "En caso de que el árbol se haya desbalanceado, sera necesario llevar a cabo una de estas 4 operaciones:\n",
-        "*   Rotación simple a la derecha.\n",
-        "*   Rotación simple a la izquierda.\n",
-        "*   Doble rotación a la derecha.\n",
-        "*   Doble rotación a la izquierda."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RV3UEtNWoiXE"
-      },
-      "source": [
-        "## Factor de Equilibrio (FE)\n",
-        "\n",
-        "Dado que por definición los AAVL siempre se encuentran balanceados, al insertar o eliminar un dato solo se podrá dar uno de los siguientes 4 casos:\n",
-        "\n",
-        "* **FE**(nodo) = -2 y (**FE**(nodo.der)=-1 ó **FE**(nodo.der)=0): se balancea con una rotación **simple a la izquierda** sobre nodo.\n",
-        "\n",
-        "* **FE**(nodo) = 2 y (**FE**(nodo.izq)=1 ó **FE**(nodo.izq)=0): se balancea con una rotación **simple a la derecha** sobre nodo.\n",
-        "\n",
-        "* **FE**(nodo) = -2 y **FE**(nodo.der)=1: se balancea con una **doble rotación a la izquierda**. Primero se rota a la derecha sobre nodo.der y después a la izquierda sobre nodo. \n",
-        "\n",
-        "* **FE**(nodo) = 2 y **FE**(nodo.izq)=-1: se balancea con una **doble rotación a la derecha**. Primero se rota a la izquierda sobre nodo.izq y después a la derecha sobre nodo. \n",
-        "\n",
-        "Es importante recalcar que cada vez que se balancea un nodo después de insertar o eliminar, $\\color{red}{potencialmente\\,su\\,padre\\,ser\\acute{a}\\,desbalanceado}$, es por este motivo que se tiene que **rebalancear el padre de manera recursiva y revisar los factores de equilibrio hasta llegar a la raíz**."
       ]
     },
     {
