Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "04_03_ArbolesBinariosBusqueda.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/AlgoritmosBusqueda/04_03_ArbolesBinariosBusqueda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -137,33 +138,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "nFwbfu6B1aIQ",
-        "outputId": "d391eeb6-f27c-4f33-d827-3df53dd8cbc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ec032584-8c4c-4cf6-b977-034d11e7fc28"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
         "!pip install import-ipynb"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-11-04 07:48:00--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-11-04 07:59:36--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 36350 (35K) [text/plain]\n",
+            "Length: 16821 (16K) [text/plain]\n",
             "Saving to: ‘ArbolesBinarios.ipynb’\n",
             "\n",
-            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  35.50K  --.-KB/s    in 0.009s  \n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.43K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-11-04 07:48:00 (3.88 MB/s) - ‘ArbolesBinarios.ipynb’ saved [36350/36350]\n",
+            "2021-11-04 07:59:36 (43.8 MB/s) - ‘ArbolesBinarios.ipynb’ saved [16821/16821]\n",
             "\n",
-            "Requirement already satisfied: import-ipynb in /usr/local/lib/python3.7/dist-packages (0.1.3)\n"
+            "Collecting import-ipynb\n",
+            "  Downloading import-ipynb-0.1.3.tar.gz (4.0 kB)\n",
+            "Building wheels for collected packages: import-ipynb\n",
+            "  Building wheel for import-ipynb (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for import-ipynb: filename=import_ipynb-0.1.3-py3-none-any.whl size=2975 sha256=cb2594b96202c3a133861b6720aa43dd02699a09b17f152790c4407d28c0f04e\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b1/5e/dc/79780689896a056199b0b9f24471e3ee184fbd816df355d5f0\n",
+            "Successfully built import-ipynb\n",
+            "Installing collected packages: import-ipynb\n",
+            "Successfully installed import-ipynb-0.1.3\n"
           ]
         }
       ]
@@ -332,7 +341,7 @@
         "  def borra(self, dato):\n",
         "    self.borra_nodo(self.raiz, dato)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +386,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cff0334a-018b-453a-f4da-623e17bbfad9"
+        "outputId": "c4defbe4-bacd-4d7d-8425-84ba622ebf25"
       },
       "source": [
         "def main():\n",
@@ -407,7 +416,7 @@
         "\n",
         "main()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
