--- a/AlgoritmosBusqueda/ArbolesBinarios.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBinarios.ipynb
@@ -34,10 +34,10 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Arboles Binarios de Búsqueda</i></h1>\n",
+        "  <h1 align=\"center\"><i>Arboles Binarios</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
         "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
         "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
