--- a/AlgoritmosBusqueda/04_02_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_02_ArbolAdivinador.ipynb
@@ -34,7 +34,7 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Arboles Adivinador</i></h1>\n",
+        "  <h1 align=\"center\"><i>Arbol Adivinador</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
