--- a/AlgoritmosBusqueda/ArbolesBinarios.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBinarios.ipynb
@@ -228,7 +228,7 @@
         "    else:\n",
         "      return '{}'.format(self.dato)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -328,7 +328,7 @@
         "      self.recorrido_postorden(nodo.der)\n",
         "      print(nodo.dato)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82f3c0bf-077d-4092-c55e-1fc78abb3e24"
+        "outputId": "53b682f4-bed8-4074-a3e7-19476d0b85aa"
       },
       "source": [
         "def main():\n",
@@ -364,34 +364,35 @@
         "  print('recorido en postorden')\n",
         "  ab.recorrido_postorden(ab.raiz)\n",
         "\n",
-        "# llamamos a la funcion main\n",
-        "main()"
+        "if __name__ == \"__main__\":\n",
+        "  # llamamos a la funcion main\n",
+        "  main()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "recorido en orden\n",
-            "25\n",
-            "15\n",
             "45\n",
             "10\n",
+            "15\n",
             "5\n",
             "35\n",
+            "25\n",
             "recorido en preorden\n",
             "10\n",
-            "15\n",
-            "25\n",
             "45\n",
             "5\n",
+            "15\n",
+            "25\n",
             "35\n",
             "recorido en postorden\n",
-            "25\n",
             "45\n",
             "15\n",
             "35\n",
+            "25\n",
             "5\n",
             "10\n"
           ]
