--- a/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb
@@ -141,28 +141,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66c6946b-0317-4964-90a4-ce81d825c67a"
+        "outputId": "b43cb27a-e137-4b99-9077-ef9517d828c4"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
         "!pip install import-ipynb"
       ],
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-11-10 04:32:42--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "--2021-11-10 06:48:19--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 16833 (16K) [text/plain]\n",
-            "Saving to: ‘ArbolesBinarios.ipynb.1’\n",
+            "Saving to: ‘ArbolesBinarios.ipynb.2’\n",
             "\n",
-            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0.001s  \n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-11-10 04:32:42 (29.4 MB/s) - ‘ArbolesBinarios.ipynb.1’ saved [16833/16833]\n",
+            "2021-11-10 06:48:20 (43.6 MB/s) - ‘ArbolesBinarios.ipynb.2’ saved [16833/16833]\n",
             "\n",
             "Requirement already satisfied: import-ipynb in /usr/local/lib/python3.7/dist-packages (0.1.3)\n"
           ]
@@ -339,10 +339,10 @@
         "        return aux\n",
         "  \n",
         "  ''' Borra un nodo que contiene a dato a partir de la raiz'''\n",
-        "  def borra(self, dato):\n",
+        "  def borrar(self, dato):\n",
         "    self.borra_nodo(self.raiz, dato)"
       ],
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -365,9 +365,8 @@
         "Por otro lado los metodos que sufren cambios y que requiere un analizis más detallados son los siguientes: \n",
         "\n",
         "*   `busqueda`: busca un valor en el árbol.\n",
-        "*   `insertar`: inserta un valor en el árbol.\n",
-        "*   `minimo_en_subarbol`: devuelve el mínimo a partir de un nodo.\n",
-        "*   `borra_nodo`: borra un valor del árbol.\n",
+        "*   `insertar`: inserta un valor en el árbol a partir de la raíz.\n",
+        "*   `borrar`: borra un valor del árbol a partir de la raíz.\n",
         "\n",
         "Para una mejor comprensión del funcionamiento de estos métodos harémos uso del programa *trees.jar* para mostrar de manera más detallada el funcionamiento de los mismos.\n"
       ]
@@ -441,7 +440,7 @@
         "id": "pQz_5K2jbCYq"
       },
       "source": [
-        "## `borrar_nodo` y `minimo_en_subarbol`\n",
+        "## `borrar`\n",
         "\n",
         "El método para eliminar un valor dentro de un ABB requiere un poco más de esfuerzo para cumplir con el orden dentro del ABB.\n",
         "\n",
@@ -461,11 +460,20 @@
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/minimo.gif?raw=1\" width=\"700\"> \n",
-        "</center>\n",
+        "</center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wCjNPVvWnYvg"
+      },
+      "source": [
+        "### ¿Más casos?\n",
         "\n",
-        "Para ser honesto existen más casos, por ejemplo ¿qué sucede si el nodo a eliminar no tiene hijos? ó ¿qué sucede si solo tiene hijo izquierdo? ó qué sucede si el nodo a eliminar es la raíz? 😮\n",
+        "Para ser honesto existen más casos, por ejemplo ¿qué sucede si el nodo a eliminar no tiene hijos? ó ¿qué sucede si solo tiene hijo izquierdo? ó ¿qué sucede si el nodo a eliminar es la raíz? ó ¿qué sucede si el mínimo tiene ambos hijos y a su vez estos tienen más hijos? 😮\n",
         "\n",
-        "Todos estos casos, se explican de manera detallada tanto en código como en el programa *trees.jar*, así que se deja como tarea al lector revisar y entender todos estos posibles casos."
+        "Todos estos casos, se explican de manera detallada tanto en código como en el programa *trees.jar*, así que **se deja como tarea al lector revisar y entender todos estos posibles casos**."
       ]
     },
     {
@@ -486,7 +494,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09805302-18f5-416e-b1b6-8f28a7de1e36"
+        "outputId": "9f395164-70a4-488e-c7b2-5eecc9dc6351"
       },
       "source": [
         "def main():\n",
@@ -509,7 +517,7 @@
         "  print('recorido en postorden')\n",
         "  abb.recorrido_postorden(abb.raiz)\n",
         "  \n",
-        "  abb.borra(5)\n",
+        "  abb.borrar(5)\n",
         "  \n",
         "  print ('recorido en orden')\n",
         "  abb.recorrido_enorden(abb.raiz)\n",
@@ -518,7 +526,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
