Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -143,9 +143,21 @@
       "source": [
         "En caso de que el árbol se haya desbalanceado, sera necesario llevar a cabo una de estas 4 operaciones:\n",
         "*   Rotación simple a la derecha.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/sderecha.gif?raw=1\" width=\"700\"> \n",
+        "</center>\n",
         "*   Rotación simple a la izquierda.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/sizquierda.gif?raw=1\" width=\"700\"> \n",
+        "</center>\n",
         "*   Doble rotación a la derecha.\n",
-        "*   Doble rotación a la izquierda."
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/doblederecha.gif?raw=1\" width=\"700\"> \n",
+        "</center>\n",
+        "*   Doble rotación a la izquierda.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dobleizquierda.gif?raw=1\" width=\"700\"> \n",
+        "</center>"
       ]
     },
     {
