--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "ArbolesBalanceados.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +179,299 @@
         "\n",
         "Es importante recalcar que cada vez que se balancea un nodo después de insertar o eliminar, **potencialmente su padre será desbalanceado**, es por este motivo que se tiene que **rebalancear el padre de manera recursiva y revisar los factores de equilibrio hasta llegar a la raíz**."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ynjir8B-AfeQ"
+      },
+      "source": [
+        "Primero necesitamos importar la clases previas.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nFwbfu6B1aIQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca793bb1-4cbf-45fc-9f2c-964437614f27"
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-11-18 03:13:04--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 16833 (16K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinarios.ipynb’\n",
+            "\n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-18 03:13:04 (45.9 MB/s) - ‘ArbolesBinarios.ipynb’ saved [16833/16833]\n",
+            "\n",
+            "--2021-11-18 03:13:04--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 28864 (28K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinariosBusqueda.ipynb’\n",
+            "\n",
+            "ArbolesBinariosBusq 100%[===================>]  28.19K  --.-KB/s    in 0.002s  \n",
+            "\n",
+            "2021-11-18 03:13:04 (13.9 MB/s) - ‘ArbolesBinariosBusqueda.ipynb’ saved [28864/28864]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9m3KODEZCXZH",
+        "outputId": "51002e7d-b66e-4e12-c4e4-c1117d401b06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install import-ipynb"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting import-ipynb\n",
+            "  Downloading import-ipynb-0.1.3.tar.gz (4.0 kB)\n",
+            "Building wheels for collected packages: import-ipynb\n",
+            "  Building wheel for import-ipynb (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for import-ipynb: filename=import_ipynb-0.1.3-py3-none-any.whl size=2975 sha256=f70006ed0cfcc84b05421d6f7601f9e63da275f814c1024566d21de0aa2201e2\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b1/5e/dc/79780689896a056199b0b9f24471e3ee184fbd816df355d5f0\n",
+            "Successfully built import-ipynb\n",
+            "Installing collected packages: import-ipynb\n",
+            "Successfully installed import-ipynb-0.1.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7hljHiPQBBWL"
+      },
+      "source": [
+        "# -*- coding: utf-8 -*-\n",
+        "#import import_ipynb\n",
+        "from ArbolesBinariosBusqueda import ABB\n",
+        "from ArbolesBinarios import Nodo\n",
+        "\n",
+        "''' Clase ArbolAVL, genera la estructura de un arbol AVL, asi como sus funciones.\n",
+        "    Dado que hereda de la clase ABB, la clase AVL cuenta con todas las funciones\n",
+        "    de la clase ABB'''\n",
+        "class ArbolAVL(ABB):\n",
+        "\n",
+        "    def __init__(self, dato):\n",
+        "        super(ArbolAVL, self).__init__(dato)\n",
+        "        \n",
+        "    #Devuelve el ultimo nodo agregado para balanceo en caso necesario\n",
+        "    def ultimo(self):\n",
+        "        return self.ultimo_agregado\n",
+        "\n",
+        "    #Determina si un nodo esta balanceado\n",
+        "    def balanceado(self, nodo):\n",
+        "        return abs(self.altura(nodo.izq)-self.altura(nodo.der)) <= 1\n",
+        "\n",
+        "    #Inserta un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
+        "    def insertar(self, dato):\n",
+        "        #Se inserta el dato usando el metodo de la clase padre\n",
+        "        super(ArbolAVL, self).insertar(dato)\n",
+        "        #Identificamos donde se inserto el dato\n",
+        "        ultimo_nodo_insertado = self.ultimo()\n",
+        "        \n",
+        "        #Se rebalancean los nodos que hayan quedado desbalanceados\n",
+        "        #Y se empieza desde el padre, por que nodo por def, no pudo\n",
+        "        #haber quedado desbalanceado\n",
+        "        self.balancea(ultimo_nodo_insertado.padre)\n",
+        "        \n",
+        "    #Borra un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
+        "    def borra(self, dato):\n",
+        "        #Se borra el nodo usando el metodo de la clase padre\n",
+        "        borradopadre = self.borra_nodo(self.raiz, dato)\n",
+        "        \n",
+        "        #Se rebalancean los nodos que hayan quedado desbalanceados\n",
+        "        #Y se empieza desde el padre, por que nodo por def, no pudo\n",
+        "        #haber quedado desbalanceado\n",
+        "        self.balancea(borradopadre)\n",
+        "    \n",
+        "    #Balancea el arbol, a partir de un nodo\n",
+        "    def balancea(self, nodo):\n",
+        "        #caso base\n",
+        "        if nodo is None:\n",
+        "            return\n",
+        "        if not self.balanceado(nodo):\n",
+        "            factorNodo = self.factor_equilibrio(nodo)\n",
+        "            factorIz = self.factor_equilibrio(nodo.izq)\n",
+        "            factorDer = self.factor_equilibrio(nodo.der)\n",
+        "            #Si el nodo esta desbalanceado se tendra uno de 4 casos\n",
+        "            #mismos que se solucionan con alguna de las 4 rotaciones\n",
+        "            if factorNodo == -2 and (factorIz == -1 or factorIz == 0): #probado\n",
+        "                self.rotacionSimpleDerecha(nodo)\n",
+        "            if factorNodo == 2 and (factorDer == 1 or factorDer == 0): #probado\n",
+        "                self.rotacionSimpleIzquierda(nodo)\n",
+        "            if factorNodo == -2 and factorIz == 1: #probado\n",
+        "                self.rotacionDobleDerecha(nodo)\n",
+        "            if factorNodo == 2 and factorDer == -1: #probado\n",
+        "                self.rotacionDobleIzquierda(nodo) \n",
+        "        #llamada recursiva para balancear toda la ruta. Desde donde se inserto\n",
+        "        #el nodo, hasta la raiz        \n",
+        "        self.balancea(nodo.padre)        \n",
+        "\n",
+        "    '''\n",
+        "    2 = el subarbol esta muy cargado a la derecha\n",
+        "    1 = el subarbol esta cargado a la derecha\n",
+        "    0 = no hace falta rotar\n",
+        "    -1 = el subarbol esta cargado a la izquierda\n",
+        "    -2 = el subarbol esta muy cargado a la izquierda\n",
+        "    '''\n",
+        "    def factor_equilibrio(self, nodo):\n",
+        "        if nodo is None:\n",
+        "            return 0\n",
+        "        else:\n",
+        "            return self.altura(nodo.der)-self.altura(nodo.izq)\n",
+        "    \n",
+        "    #Rota el nodo a la derecha\n",
+        "    def rotacionSimpleDerecha(self, nodo):\n",
+        "        if nodo is not None:\n",
+        "            if nodo is self.raiz:\n",
+        "                #actualizamos la raiz\n",
+        "                self.raiz = nodo.izq\n",
+        "                self.raiz.padre = None\n",
+        "                # si el nodo.izq tiene hijo derecho se pasa como izq de nodo\n",
+        "                if nodo.izq.der is not None:\n",
+        "                    nodo.izq.der.padre = nodo\n",
+        "                    nodo.izq = nodo.izq.der\n",
+        "                else:\n",
+        "                    nodo.izq = None\n",
+        "                self.raiz.der = nodo\n",
+        "                nodo.padre = self.raiz\n",
+        "            else:\n",
+        "                nuevaraiz = nodo.izq\n",
+        "                #actualizamos la nueva raiz\n",
+        "                if nodo.esIzq():\n",
+        "                    nodo.padre.izq = nuevaraiz\n",
+        "                else:\n",
+        "                    nodo.padre.der = nuevaraiz\n",
+        "                nuevaraiz.padre = nodo.padre\n",
+        "                # si el nodo.izq tiene hijo derecho se pasa como izq de nodo\n",
+        "                if nuevaraiz.der is not None:\n",
+        "                    nuevaraiz.der.padre = nodo\n",
+        "                    nodo.izq = nuevaraiz.der\n",
+        "                else:\n",
+        "                    nodo.izq = None\n",
+        "                nuevaraiz.der = nodo\n",
+        "                nodo.padre = nuevaraiz\n",
+        "      \n",
+        "    #Rota el nodo a la izquierda            \n",
+        "    def rotacionSimpleIzquierda(self, nodo):\n",
+        "        if nodo is not None:\n",
+        "            if nodo is self.raiz:\n",
+        "                #actualizamos la raiz\n",
+        "                self.raiz = nodo.der\n",
+        "                self.raiz.padre = None\n",
+        "                # si el nodo.der tiene hijo izquierdo se pasa como der de nodo\n",
+        "                if nodo.der.izq is not None:\n",
+        "                    nodo.der.izq.padre = nodo\n",
+        "                    nodo.der = nodo.der.izq\n",
+        "                else:\n",
+        "                    nodo.der = None\n",
+        "                self.raiz.izq = nodo\n",
+        "                nodo.padre = self.raiz\n",
+        "            else:\n",
+        "                nuevaraiz = nodo.der\n",
+        "                #actualizamos la nueva raiz\n",
+        "                if nodo.esIzq():\n",
+        "                    nodo.padre.izq = nuevaraiz\n",
+        "                else:\n",
+        "                    nodo.padre.der = nuevaraiz\n",
+        "                nuevaraiz.padre = nodo.padre\n",
+        "                # si el nodo.der tiene hijo izquierdo se pasa como der de nodo\n",
+        "                if nuevaraiz.izq is not None:\n",
+        "                    nuevaraiz.izq.padre = nodo\n",
+        "                    nodo.der = nuevaraiz.izq\n",
+        "                else:\n",
+        "                    nodo.der = None\n",
+        "                nuevaraiz.izq = nodo\n",
+        "                nodo.padre = nuevaraiz\n",
+        "                \n",
+        "    #Define la doble rotacion a la derecha, a partir de un nodo            \n",
+        "    def rotacionDobleDerecha(self, nodo):\n",
+        "        self.rotacionSimpleIzquierda(nodo.izq)\n",
+        "        self.rotacionSimpleDerecha(nodo)\n",
+        "    \n",
+        "    #Define la doble rotacion a la izquierda, a partir de un nodo     \n",
+        "    def rotacionDobleIzquierda(self, nodo):\n",
+        "        self.rotacionSimpleDerecha(nodo.der)\n",
+        "        self.rotacionSimpleIzquierda(nodo)\n",
+        "                    "
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YeQGldRfBOhX"
+      },
+      "source": [
+        "Hacemos pruebas\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kAyp3AieBQNn"
+      },
+      "source": [
+        "def main():\n",
+        "  aavl = ArbolAVL(55)\n",
+        "  aavl.insertar(10)\n",
+        "  aavl.insertar(5)\n",
+        "  aavl.insertar(16)\n",
+        "  aavl.insertar(37)\n",
+        "  aavl.insertar(9)\n",
+        "  aavl.insertar(20)\n",
+        "  aavl.insertar(15)\n",
+        "  aavl.borra(9)\n",
+        "  aavl.borra(16)\n",
+        "  aavl.insertar(1)\n",
+        "  \n",
+        "  print \"Recorrido en orden\"\n",
+        "  aavl.recorrido_enorden(aavl.raiz)\n",
+        "  print \"Recorrido en preorden\"\n",
+        "  aavl.recorrido_preorden(aavl.raiz)\n",
+        "  print \"Recorrido en postorden\"\n",
+        "  aavl.recorrido_postorden(aavl.raiz)\n",
+        "  print aavl.factor_equilibrio(aavl.raiz)\n",
+        "    \n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  # llamamos a la funcion main\n",
+        "  main()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
