Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "ArbolesBalanceados.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,56 +194,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nFwbfu6B1aIQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2bc72592-7a37-444e-f65c-0cb950f17331"
-      },
-      "source": [
-        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
-        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2021-11-18 03:52:08--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 16833 (16K) [text/plain]\n",
-            "Saving to: ‘ArbolesBinarios.ipynb.2’\n",
-            "\n",
-            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2021-11-18 03:52:08 (43.0 MB/s) - ‘ArbolesBinarios.ipynb.2’ saved [16833/16833]\n",
-            "\n",
-            "--2021-11-18 03:52:08--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 28864 (28K) [text/plain]\n",
-            "Saving to: ‘ArbolesBinariosBusqueda.ipynb.1’\n",
-            "\n",
-            "ArbolesBinariosBusq 100%[===================>]  28.19K  --.-KB/s    in 0.001s  \n",
-            "\n",
-            "2021-11-18 03:52:08 (34.6 MB/s) - ‘ArbolesBinariosBusqueda.ipynb.1’ saved [28864/28864]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "7hljHiPQBBWL"
       },
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "#import import_ipynb\n",
         "from ArbolesBinariosBusqueda import ABB\n",
         "from ArbolesBinarios import Nodo\n",
         "\n",
@@ -391,7 +345,7 @@
         "    self.rotacionSimpleDerecha(nodo.der)\n",
         "    self.rotacionSimpleIzquierda(nodo)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +393,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
