Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -194,6 +194,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CxyQtkfzniRm"
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "7hljHiPQBBWL"
       },
       "source": [
@@ -345,7 +357,7 @@
         "    self.rotacionSimpleDerecha(nodo.der)\n",
         "    self.rotacionSimpleIzquierda(nodo)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
