Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -98,7 +98,7 @@
         "\n",
         "*    $H_I$ es AAVL.\n",
         "*    $H_D$ es AAVL.\n",
-        "*    $|altura(H_I) - altura(H_D)| \\leq 1$:"
+        "*    $|altura(H_D) - altura(H_I)| \\leq 1$:"
       ]
     },
     {
@@ -141,6 +141,8 @@
         "id": "0H51P2a0oiEw"
       },
       "source": [
+        "### Rotaciones\n",
+        "\n",
         "En caso de que el árbol se haya desbalanceado, sera necesario llevar a cabo una de estas 4 operaciones:\n",
         "*   Rotación simple a la derecha.\n",
         "<center>\n",
@@ -166,7 +168,7 @@
         "id": "RV3UEtNWoiXE"
       },
       "source": [
-        "## Factor de Equilibrio (FE)\n",
+        "### Factor de Equilibrio (FE)\n",
         "\n",
         "Dado que por definición los AAVL siempre se encuentran balanceados, al insertar o eliminar un dato solo se podrá dar uno de los siguientes 4 casos:\n",
         "\n",
@@ -184,11 +186,145 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "YeQGldRfBOhX"
+      },
+      "source": [
+        "# Nuevos métodos\n",
+        "\n",
+        "Similar a la forma en como fueron construidos los `ABB`, los árboles `AAVL` heredan todo lo construido previamente y simplemente agregamos (sobrecargamos) las características necesarias para mantener el árbol balanceado."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IzmNJ2xvsBO7"
+      },
+      "source": [
+        "## `ultimo`\n",
+        "\n",
+        "Este es un método muy sencillo que simplemente devuelve el último elemento agregado al árbol para poder comenzar con la labor de detectar posibles desbalanceos en el árbol."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6dfDoN_ZsPay"
+      },
+      "source": [
+        "## `balanceado`\n",
+        "\n",
+        "Haciendo uso de la definición de balance, este método nos indica si un nodo se encuentra desbalanceado, para posteriormente proceder a balancear el mismo.\n",
+        "\n",
+        "La forma mediante la cual se determina si un nodo se encuentra desbalanceado es la siguiente, sea $N$ un nodo binario con hijos izquierdo y derecho (posiblemente nulos) $H_I$ y $H_D$, respectivamente.\n",
+        "\n",
+        "Podemos determinar si este nodo $N$ se encuentra desbalanceado así.\n",
+        "\n",
+        "$$B(N)=\\begin{cases}\n",
+        "|altura(H_D) - altura(H_I)| \\leq 1 & True\\\\\n",
+        "E.O.C. & False\n",
+        "\\end{cases}$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IVckFMYepRPc"
+      },
+      "source": [
+        "## `factor_equilibrio`\n",
+        "\n",
+        "Este nuevo método se encarga de calcular el factor de equilibrio de un determinado nodo, mediante el cálculo de de la resta de la altura del hijo derecho menos la altura del hijo izquierdo.\n",
+        "\n",
+        "Este método es necesario ya que cada vez que insertemos o borremos un nodo del árbol, **se requiere revisar el factor de equilibrio de todos los ancestros del padre del nodo** insertado o eliminado.\n",
+        "\n",
+        "De manera más formal lo podemos ver así, sea $N$ un nodo binario con hijos izquierdo y derecho (posiblemente nulos) $H_I$ y $H_D$, respectivamente.\n",
+        "\n",
+        "El factor de equilibro de $N$ se calcula así.\n",
+        "\n",
+        "`factor_equilibrio` = $altura(H_D) -altura(H_I)$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BwAoicVBrf-S"
+      },
+      "source": [
+        "## `balancea`\n",
+        "\n",
+        "Dependiendo de las posibles combinaciones del factor de equilibrio comentadas en la sección \"Factor de Equilibrio\", el método `balancea` se encarga de tomar un `nodo` en el árbol y revisar si requiere alguna de las 4 posibles rotaciones:\n",
+        "\n",
+        "1.   Rotacion simple derecha: `factor_equilibrio(nodo) = -2` y (`factor_equilibrio(nodo.izq)=-1` ó `factor_equilibrio(nodo.izq)=0`): se balancea con una rotación **simple a la derecha** sobre `nodo`.\n",
+        "2.   Rotacion simple izquierda: `factor_equilibrio(nodo) = 2` y (`factor_equilibrio(nodo.der)=1` ó `factor_equilibrio(nodo.der)=0`): se balancea con una rotación **simple a la izquierda** sobre `nodo`.\n",
+        "3.   Rotacion izquierda-derecha: `factor_equilibrio(nodo) = -2` y `factor_equilibrio(nodo.izq)=1`: se balancea con una **rotación izquierda derecha**. Primero se rota a la izquierda sobre `nodo.izq` y después a la derecha sobre `nodo`. \n",
+        "4.   Rotacion derecha-izquierda: `factor_equilibrio(nodo) = 2` y `factor_equilibrio(nodo.der)=-1`: se balancea con una **rotación derecha izquierda**. Primero se rota a la derecha sobre `nodo.der` y después a la izquierda sobre `nodo`.\n",
+        "\n",
+        "Es muy importante mencionar que una vez que se haya balanceado un `nodo`, ese balanceo posiblemente desbalanceo a su `nodo.padre`, por lo que es necesario **balancear de manera recursiva a todos los ancestros** de este `nodo`.\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TGlLIIPTwqr4"
+      },
+      "source": [
+        "## `rotaciones`\n",
+        "\n",
+        "Las 4 posibles rotaciones necesarias para balancear un nodo, son las siguientes:\n",
+        "\n",
+        "*   `rotacionSimpleDerecha`.\n",
+        "*   `rotacionSimpleIzquierda`.\n",
+        "*   `rotacionIzquierdaDerecha`.\n",
+        "*   `rotacionDerechaIzquierda`.\n",
+        "\n",
+        "El detalle del funcionamiento de cada una des estas rotaciones se muestra tanto en código, como en la sección de \"Rotaciones\".\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8a-_7Uu1x37s"
+      },
+      "source": [
+        "## `insertar`\n",
+        "\n",
+        "Este método usa como base al método `insertar` de la clase padre, es decir de la clase `ABB` y una vez que ya se inserto el nuevo valor en el AAVL, se apoya del método `ultimo` para comenzar a balancear (en caso de ser necesario) a los ancestros del `ultimo_agregado`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ecERULd20gbR"
+      },
+      "source": [
+        "## `borra`\n",
+        "\n",
+        "De manera similar a como funciona al método `insertar`, el método `borrar` se apoya en el método `borra_nodo`de la clase padre para borrar el nodo en cuestión.\n",
+        "\n",
+        "El método `borra_nodo` devuelve el padre del nodo que ha sido borrado ya que a partir de ese nodo se pudo haber dado un desbalance.\n",
+        "\n",
+        "Finalmente el método `borra` se encarga de rebalancear el árbol en caso de que se haya dado un potencial desbalanceo."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ynjir8B-AfeQ"
       },
       "source": [
-        "Primero necesitamos importar la clases previas.\n",
-        "\n"
+        "# Código y Pruebas\n",
+        "\n",
+        "Para poder usar el código de las clase previas, primero necesitamos agregar estos *jupyters* a la sesión actual y posteriormente importarlas.\n",
+        "\n",
+        "Cada uno de los métodos de la clase `AAVL` cuenta con la documentación necesaria para poder comprender los detalles de cada método.\n",
+        "\n",
+        "Algo importante que se puede notar en esta clase, es que si no hubiéramos usado el POO como lo hemos hecho, **la clase `AAVL` sería tan extensa que se volvería una labor muy tediosa estudiarla detalladamente**.\n",
+        "\n",
+        "Sin embargo gracias a la POO, podemos dejar de lado métodos definidos previamente y únicamente enfocarnos en los nuevos métodos de la clase `AAVL`."
       ]
     },
     {
@@ -213,7 +349,7 @@
         "from ArbolesBinarios import Nodo\n",
         "\n",
         "class ArbolAVL(ABB):\n",
-        "\n",
+        "  #Constructor que hace uso del constructor de la clase padre (ABB)\n",
         "  def __init__(self, dato):\n",
         "    super(ArbolAVL, self).__init__(dato)\n",
         "      \n",
@@ -223,29 +359,7 @@
         "\n",
         "  #Determina si un nodo esta balanceado\n",
         "  def balanceado(self, nodo):\n",
-        "    return abs(self.altura(nodo.izq)-self.altura(nodo.der)) <= 1\n",
-        "\n",
-        "  #Inserta un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
-        "  def insertar(self, dato):\n",
-        "    #Se inserta el dato usando el metodo de la clase padre\n",
-        "    super(ArbolAVL, self).insertar(dato)\n",
-        "    #Identificamos donde se inserto el dato\n",
-        "    ultimo_nodo_insertado = self.ultimo()\n",
-        "      \n",
-        "    #Se rebalancean los nodos que hayan quedado desbalanceados\n",
-        "    #Y se empieza desde el padre, por que nodo por def, no pudo\n",
-        "    #haber quedado desbalanceado\n",
-        "    self.balancea(ultimo_nodo_insertado.padre)\n",
-        "      \n",
-        "  #Borra un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
-        "  def borra(self, dato):\n",
-        "    #Se borra el nodo usando el metodo de la clase padre\n",
-        "    borradopadre = self.borra_nodo(self.raiz, dato)\n",
-        "    \n",
-        "    #Se rebalancean los nodos que hayan quedado desbalanceados\n",
-        "    #Y se empieza desde el padre, por que nodo por def, no pudo\n",
-        "    #haber quedado desbalanceado\n",
-        "    self.balancea(borradopadre)\n",
+        "    return abs(self.altura(nodo.der)-self.altura(nodo.izq)) <= 1\n",
         "\n",
         "  '''\n",
         "  2 = el subarbol esta muy cargado a la derecha\n",
@@ -355,19 +469,32 @@
         "  #Define la doble rotacion a la izquierda, a partir de un nodo     \n",
         "  def rotacionDerechaIzquierda(self, nodo):\n",
         "    self.rotacionSimpleDerecha(nodo.der)\n",
-        "    self.rotacionSimpleIzquierda(nodo)"
+        "    self.rotacionSimpleIzquierda(nodo)\n",
+        "\n",
+        "  #Inserta un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
+        "  def insertar(self, dato):\n",
+        "    #Se inserta el dato usando el metodo de la clase padre\n",
+        "    super(ArbolAVL, self).insertar(dato)\n",
+        "    #Identificamos donde se inserto el dato\n",
+        "    ultimo_nodo_insertado = self.ultimo()\n",
+        "      \n",
+        "    #Se rebalancean los nodos que hayan quedado desbalanceados\n",
+        "    #Y se empieza desde el padre, por que nodo por def no pudo\n",
+        "    #haber quedado desbalanceado\n",
+        "    self.balancea(ultimo_nodo_insertado.padre)\n",
+        "      \n",
+        "  #Borra un nodo en el arbol y lo balancea, si es que se desbalanceo\n",
+        "  def borra(self, dato):\n",
+        "    #Se borra el nodo usando el metodo de la clase padre\n",
+        "    borradopadre = self.borra_nodo(self.raiz, dato)\n",
+        "    \n",
+        "    #Se rebalancean los nodos que hayan quedado desbalanceados\n",
+        "    #Y se empieza desde el padre, por que nodo por def, no pudo\n",
+        "    #haber quedado desbalanceado\n",
+        "    self.balancea(borradopadre)"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YeQGldRfBOhX"
-      },
-      "source": [
-        "Hacemos pruebas\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -376,7 +503,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62fa36c9-8c87-4de9-f489-f3bf00ce5ffa"
+        "outputId": "e02d8523-49a0-47ee-dac0-5c4de8480be7"
       },
       "source": [
         "def main():\n",
@@ -405,7 +532,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
